--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 .holder{
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
+            justify-content: space-evenly;
 	gap:10px;
         }
         .holder div{
